manifests/instances/core/templates/inference/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mnist-webapp
  namespace: mnist
  labels:
    app: mnist-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mnist-webapp
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mnist-webapp
    spec:
      containers:
      - image: quay.io/alegros/mnist-webapp:v3
        imagePullPolicy: Always
        name: mnist-webapp
        ports:
        - containerPort: 8080
          protocol: TCP
