manifests/instances/core/templates/inference/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mnist-webapp
  namespace: mnist
  labels:
    app: mnist-webapp
spec:
  selector:
    app: mnist-webapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
