manifests/instances/core/templates/inference/frontend/legacy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mnist-webapp-legacy
  namespace: mnist
  labels:
    app: mnist-webapp-legacy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mnist-webapp-legacy
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mnist-webapp-legacy
    spec:
      containers:
      - image: quay.io/alegros/mnist-webapp:v3
        imagePullPolicy: Always
        name: mnist-webapp-legacy
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mnist-webapp-legacy
  namespace: mnist
  labels:
    app: mnist-webapp-legacy
spec:
  selector:
    app: mnist-webapp-legacy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mnist-webapp-legacy
  namespace: mnist
  labels:
    app: mnist-webapp-legacy
spec:
  port:
    targetPort: 8080 
  to:
    kind: Service
    name: mnist-webapp-legacy
  tls:
    termination: edge
  wildcardPolicy: None
